<resources>
    <string name="app_name">Homework for Doubletapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_habit">Create new habit</string>
    <string name="please_enter_habit_name">Please enter habit name.</string>
    <string name="please_enter_habit_description">Please enter habit description.</string>
    <string name="color">Color</string>
    <string name="habit_frequency">Habit frequency</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="habits_list">Habits list</string>
    <string name="habit_editor">Habit editor</string>
    <string name="name_is_too_long">Name is too Long(max is %d)</string>
    <string name="Name_cant_empty">Name can\'t be empty or blank!</string>
    <string name="description_cant_empty">Description can\'t be empty or black</string>
    <string name="Frequency_too_long">Frequency is too long(max %d)</string>
    <string name="frequency_empty">Frequency can\'t be empty!</string>
    <string name="successfully_inserted">Habit was successfully inserted!</string>
    <string name="successfully_updated">Habit was successfully updated!</string>
    <string name="successfully_deleted">Habit was successfully deleted!</string>
    <string name="no_such_name">"No such habit name."</string>
    <string name="habit_existing">"Habit is already exist"</string>
    <string name="delete">Delete</string>
    <string name="apply_on_save_button">Apply</string>
    <string name="pick_a_color">Pick a color:</string>
    <string name="about_this_app">About this app</string>
    <string name="content_description">content description</string>
    <string name="textview_1">textview 1</string>
    <string name="textview_2">textview 2</string>
    <string name="search_by_habit_name">Search by habit name.</string>
    <string name="search_and_sorting">^ Search and sorting ^</string>

    <!--    sorting in main bottom sheet-->
    <string name="sort_by">Sort:</string>
    <string name="by_name">By name</string>
    <string name="by_type">By Type</string>
    <string name="by_priority">By Priority</string>
    <string name="by_color">By Color</string>

</resources>