<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/pick_color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/pick_a_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/current_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/current_color"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="@+id/pick_color_text"
        app:layout_constraintEnd_toEndOf="@+id/pick_color_text"
        app:layout_constraintTop_toBottomOf="@+id/pick_color_text"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_scroll"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <View
            android:id="@+id/view1"
            android:layout_width="1000dp"
            android:layout_height="130dp"
            android:focusable="true"
            android:clickable="true"
            android:layout_gravity="start|center_vertical"
            android:background="@color/teal_700"
            android:visibility="visible"
            tools:text="Choose color sdfgds g" />

        </FrameLayout>

    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/color_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_on_save_button"
        app:layout_constraintBottom_toTopOf="@+id/color_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/color_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>